<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="60dp"
    android:orientation="vertical"
    tools:context=".Activity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#ddd"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            style="@style/fotos_imageView"
            android:layout_weight="1"
            android:background="@drawable/foto2" />

        <EditText

            android:id="@+id/kullanıcıAdi"
            style="@style/editText"
            android:layout_weight="5"
            android:hint="@string/activity_2_user_editText" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:background="#ddd"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/Kilit"
           style="@style/fotos_imageView"
            android:layout_weight="1"
            android:background="@drawable/kilit" />

        <EditText
            android:id="@+id/password"
            style="@style/editText"
            android:layout_weight="5"
            android:hint="@string/activity_2_password_editText" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/buton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/activty_2_kaydet_btn" />
    </LinearLayout>
</LinearLayout>