<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/hello" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:background="#ddd"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:background="@drawable/foto2" />

        <EditText
            android:id="@+id/kullanıcıAdi"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:hint="@string/activity_main_user_editText"

            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:background="#ddd"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/Kilit"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:background="@drawable/kilit" />

        <EditText
            android:id="@+id/password"
            style="@style/editText"
            android:layout_weight="5"
            android:hint="@string/activity_main_password_editText"
            android:inputType="textPassword"

            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/buton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_giris_btn" />
    </LinearLayout>

</LinearLayout>